--- a/willstec-property-file-access-service.properties
+++ b/willstec-property-file-access-service.properties
@@ -1,2 +1,2 @@
-property-file.name = github-new-changing-one-more-time changed
-property-file.description = Github Default Environment Properties !
+property-file.name=github-new-changing-one-more-time changed
+property-file.description=Github Default Environment Properties !
